--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^4.13.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "request": "^2.83.0",
