Build out dashboard entry component

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.13.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-table": "^6.7.5",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
